# untitled

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  install
src/cpp/: app.cpp  element.cpp  event_handler.cpp  utils.cpp  window.cpp
src/include/: SXL.h
